# landcover-classification

./: .gitignore  README.md  environment.yml  pyproject.toml
cv_routes/: __init__.py  config.py  data.py  download.py  export.py  inference.py  pipeline.py  territory.py  visualization.py
flair_inference/: __init__.py  classes.py  download.py  model.py  visualization.py
notebooks/: demo_cv_routes.ipynb
ortho_ign/: __init__.py  export.py  fetch.py  territory.py  tiling.py  wms.py
use_cases/road_detection/: app.py  config.py  notebook.ipynb  requirements.txt
