[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# ortho_ign — lib acquisition ortho-photos IGN (WMS, tiling, territoire)
# ---------------------------------------------------------------------------
[project]
name = "ortho-ign"
version = "0.1.0"
description = "Acquisition d'ortho-photos IGN via WMS et découpage en tuiles GeoTIFF"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "rasterio>=1.3",
    "requests>=2.31",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
]

# ---------------------------------------------------------------------------
# flair_inference — lib inférence FLAIR-INC ONNX (12 classes)
# ---------------------------------------------------------------------------
[project.optional-dependencies]
flair = [
    "onnxruntime>=1.16",
]
hf    = ["huggingface_hub>=0.20"]
dev   = ["pytest>=7", "pytest-cov"]
full  = ["onnxruntime>=1.16", "huggingface_hub>=0.20", "matplotlib>=3.8", "gradio>=4.0"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["ortho_ign*", "flair_inference*"]
